--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -6,6 +6,10 @@
 .columns img {
     width: 100%;
 }
+.feature-highlight picture {
+  height: 300px; /* Set the desired height */
+  display: block; /* Ensure the picture element behaves like a block-level element */
+}
 
 @media (min-width: 900px) {
     .columns > div {
