--- a/blocks/pageheaderdemo/pageheaderdemo.css
+++ b/blocks/pageheaderdemo/pageheaderdemo.css
@@ -5,8 +5,8 @@
         position: relative;
         background-size: cover;
         background-position: center;
-        width: 1920px;
-        height: 600px;
+        width: 100%;
+        height: 100%;
       }
     
       .pageheaderdemo-text-wrapper {
@@ -15,8 +15,10 @@
         left: 0;
         background-color: red;
         color: white;
-        padding: 50px;
+        padding: 5px;
         width: 50%; /* Adjust as needed */
         border-radius: 0 16px 16px 0;
-        top :30%
+        top :30%;
+        height :50%;
+        overflow :hidden;    
       }
