--- a/blocks/pageheaderdemo/pageheaderdemo.css
+++ b/blocks/pageheaderdemo/pageheaderdemo.css
@@ -16,7 +16,7 @@
         background-color: red;
         color: white;
         padding: 5px;
-        width: 50%; /* Adjust as needed */
+        width: 70%; 
         border-radius: 0 16px 16px 0;
         top :30%;
         height :50%;
