--- a/blocks/promotion-listing/promotion-listing.css
+++ b/blocks/promotion-listing/promotion-listing.css
@@ -5,20 +5,31 @@
 }
 
 .offer-card {
-  flex: 0 0 auto;
-  width: 300px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  color: #333;
-  text-align: center;
+  display: flex;
+  width: 344px;
+  height: 358px;
+  padding: 24px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-radius: 16px;
+  background: #FFD9F7;
 }
 
 .offer-card-content {
   padding: 20px;
 }
-
+.offer-card h3 {
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 90%;
+  text-transform: uppercase;
+}
 .pink-background {
   background-color: #ffcccb;
+  h3 {
+    color:  #DA1710;
+  }
 }
 
 .white-background {
@@ -29,16 +40,21 @@
   background-size: cover;
   background-position: center;
   color: white;
+  h3 {
+    color:  #FFF;
+  }
 }
 
-.offer-card h3 {
-  font-size: 20px;
-  margin-top: 10px;
-}
 
 .offer-card p {
-  font-weight: bold;
-  margin: 0;
+  color: #181B25;
+  text-align: center;
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 21px */
 }
 
 .credit-card-image {
