--- a/blocks/promotion-listing/promotion-listing.css
+++ b/blocks/promotion-listing/promotion-listing.css
@@ -1,9 +1,3 @@
-.offers-container {
-  display: flex;
-  overflow-x: auto;
-  gap: 20px;
-}
-
 .offer-card {
   display: flex;
   width: 344px;
@@ -20,10 +14,11 @@
   padding: 20px;
 }
 .offer-card h3 {
-  font-size: 54px;
+  font-size: 50px;
   font-weight: 700;
   line-height: 90%;
   text-transform: uppercase;
+  margin-top: 20px
 }
 .pink-background {
   background-color: #ffcccb;
@@ -34,6 +29,11 @@
 
 .white-background {
   background-color: #ffffff;
+  h3 {
+    color:  #DA1710;
+    font-size: 20px;
+    text-transform: none;
+    }
 }
 
 .image-background {
@@ -48,7 +48,7 @@
 
 .offer-card p {
   color: #181B25;
-  text-align: center;
+  text-align: left;
   font-feature-settings: 'liga' off, 'clig' off;
   font-family: "SF Pro Text";
   font-size: 14px;
