--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -27,6 +27,7 @@
 }
 .offer-card .pink {
   background-color: #FFD9F7;
+  background-image: none !important;
   h3 {
     color:  #DA1710;
   }
@@ -34,7 +35,7 @@
 
 .offer-card .white {
   background-color: #F3F4F6;
-  background-image: none !important
+  background-image: none !important;
   h3 {
     color:  #DA1710;
     font-size: 20px;
