--- a/blocks/product-cards/product-cards.css
+++ b/blocks/product-cards/product-cards.css
@@ -133,7 +133,7 @@
     margin-top: 0;
     margin-bottom: 0;
     position: absolute;
-    top: 200px;
+    top: 50%;
     left: -101px;
   }
   .product-cards.block .product.first-card .first-card-img {
