--- a/blocks/promotion-listing/promotion-listing.css
+++ b/blocks/promotion-listing/promotion-listing.css
@@ -15,6 +15,8 @@
 .offer-card-content {
   padding: 20px;
   border-radius: 16px;
+  height:100%;
+  overflow: hidden;
 }
 .offer-card h3 {
   font-size: 50px;
@@ -71,4 +73,6 @@
   border-radius: 16px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
   margin-top: 60px;
+  left: -80px;
+  position: relative;
 }
