--- a/blocks/promotion-listing/promotion-listing.css
+++ b/blocks/promotion-listing/promotion-listing.css
@@ -76,3 +76,11 @@
   left: -80px;
   position: relative;
 }
+
+.cta-button {
+  color: black;
+  align-items: center;
+  float: right;
+  width: 30px;
+  height: 30px;
+}
