--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -4,13 +4,15 @@
   flex-direction: row-reverse;
 }
 .offer-card {
-  display: flex;
-  width: 500px;
-  height: 358px;
-  padding: 24px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
+ display: flex;
+width: 550px;
+height: 151px;
+max-width: 550px;
+max-height: 151px;
+padding: 24px;
+flex-direction: column;
+justify-content: space-between;
+align-items: flex-end;
   
 }
 
@@ -19,11 +21,11 @@
   border-radius: 16px;
 }
 .offer-card h3 {
-  font-size: 50px;
+  font-size: 36px;
   font-weight: 700;
   line-height: 90%;
   text-transform: uppercase;
-  margin-top: 20px
+  margin-top: 5px;
 }
 .offer-card .pink {
   background-color: #FFD9F7;
@@ -64,7 +66,17 @@
   background-size: cover;
   background-position: center;
   color: white;
-  height: 319px;
+  height: auto;
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
   h3 {
     color:  #FFF;
@@ -91,4 +103,10 @@
   border-radius: 16px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
   margin-top: 60px;
+}
+
+.offer-card .disclaimer {
+  font-size :16px;
+  text-decoration-line:underline;
+  float: right;
 }
