--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -4,7 +4,6 @@
   flex-direction: row-reverse;
 }
 .offer-card {
- display: flex;
 width: 550px;
 height: 151px;
 max-width: 550px;
@@ -16,17 +15,20 @@ align-items: flex-end;
   
 }
 .offer-card.description{
+  .disclaimer {
+    float:left;
+    color: #da1710;
+  }
   .offer-card-content{
     background-color:#FDF5FC!important;
     h3 {
-    color:  #545262;
+    color: #181B25;
     font-size: 16px;
-      }
+    }
     h3:before {
       content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 0L9 9H0L7.5 14.25L4.5 23.25L12 17.2493L19.5 23.25L16.4993 14.25L24 9H15L12 0Z' fill='%23DA1710'/%3E%3C/svg%3E%0A");
-      position: absolute;
-      left: -35px;
-      top: -1px;
+      
+      padding-right: 10px;
   }
     p {
       color:  #595767;
@@ -128,7 +130,7 @@ font-size: 16px;
 .offer-card .disclaimer {
   font-size :16px;
   text-decoration-line:underline;
-  float: right;
+  /* float: right; */
 }
 
 .cta-button {
