--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -106,6 +106,7 @@ font-size: 16px;
 }
 
 .credit-card-image {
+  display: flex;
   width: 292.915px;
   height: 184.279px;
   transform: rotate(-20.114deg);
