--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -2,17 +2,18 @@
 .offers-container {
   display: flex;
   flex-direction: row-reverse;
+  padding-bottom: 40px;
 }
 .offer-card {
   display: flex;
-width: 550px;
-height: 151px;
-max-width: 550px;
-max-height: 151px;
-padding: 24px;
-flex-direction: column;
-justify-content: space-between;
-align-items: flex-end;
+  width: 550px;
+  height: 151px;
+  max-width: 550px;
+  max-height: 151px;
+  padding: 24px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
   
 }
 .offer-card.description{
@@ -22,18 +23,17 @@ align-items: flex-end;
   }
   .offer-card-content{
     background-color:#FDF5FC!important;
-    h3 {
-    color: #181B25;
-    font-size: 16px;
+    h4 {
+      color: #181B25;
+      font-size: 16px;
     }
-    h3:before {
+    h4:before {
       content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 0L9 9H0L7.5 14.25L4.5 23.25L12 17.2493L19.5 23.25L16.4993 14.25L24 9H15L12 0Z' fill='%23DA1710'/%3E%3C/svg%3E%0A");
-      
       padding-right: 10px;
   }
     p {
       color:  #595767;
-font-size: 16px;
+      font-size: 16px;
     }
   }
 
