--- a/blocks/promotion/promotion.css
+++ b/blocks/promotion/promotion.css
@@ -10,7 +10,7 @@
   height: 151px;
   max-width: 550px;
   max-height: 151px;
-  padding: 24px;
+  /*padding: 24px;*/
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
